src/index.css
body {
  margin: 0;
  padding: 0;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

.images {
  display: inline-flex;
  max-width: 50%;
  vertical-align: top;
  margin: 30px 20px;
  scroll-padding-top: 20px;
}

header {
  position: sticky;
  top: 0;
  background-color: white;
  z-index: 100;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
}

.animated-link {
  color: #007bff;
  transition: color 0.3s ease;
}

.animated-link:hover {
  color: #0056b3;
}

